update project config

--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.1.1",
 	"appid": "wxb5fc8d6c6016c953",
-	"projectname": "wx-mini-app",
+	"projectname": "wx-biology",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
