--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Oliver Olivia",
+    "navigationBarTitleText": "小小物种",
     "navigationBarTextStyle": "black"
   },
   "debug": true
